--- a/src/sass/templates/_header.sass
+++ b/src/sass/templates/_header.sass
@@ -4,6 +4,7 @@
 .menu
   display: flex
   justify-content: space-between
+  align-items: center
 .logo
   color: $primary
   text-transform: uppercase
